fixed a style issue with clippy and added some more hotkeys

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -153,6 +153,7 @@ footer { bottom:20px; left:30px; position:absolute; }
 #logo:hover { opacity:0.9; @include transition-property(opacity); }
 
 .breadcrumb li { background:none; padding:0; }
+span.clippy { height:30px; line-height:30px; }
 
 @-moz-keyframes poof {
     from { background-position:0 0; }
